<resources>

    <string name="add_contacts_button">Добавить контакты</string>
    <string name="group_name_text_view">Название группы</string>
    <string name="group_name_edit_text_hint">Название группы*</string>
    <string name="contacts_text_view">Контакты</string>
    <string name="new_message_group_name_text_view">Группа:</string>
    <string name="random_interval_sending_text_view1">Случайный интервал</string>
    <string name="random_interval_sending_text_view2">Отправка сообщеий будет осуществляться через случайный интервал
        времени
    </string>
    <string name="schedule_sending_text_view">Запланировать</string>
    <string name="no_schedule_sending_text_view">Отправить сразу</string>

    <string name="schedule_sending_text_view1">Запланировать отправку</string>
    <string name="schedule_sending_text_view2">Отложить отправку сообщения на указанное время</string>
    <string name="new_message_edit_text_hint">Текст сообщения*</string>
    <string name="new_template_name_hint">Введите название шаблона</string>
    <string name="new_template_text_hint">Введите текст шаблона</string>
    <string name="select_template_button_text">Выбрать из шаблонов</string>
    <string name="schedule_time_edit_text_hint">Время отправки</string>
    <string name="start_interval_caption">Начало интервала</string>
    <string name="interval_caption">Интервал</string>
    <string name="end_interval_caption">Конец интервала</string>
    <string name="messages_text_view">Сообщений</string>
    <string name="symbols_text_view">Символов</string>
    <string name="no_red_contacts_permission_text_view">Разрешение на чтение контактов не предоставлено</string>
    <string name="sim_text_input_layout_hint">SIM-карта</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_bottom_navigation">Сообщения</string>
    <string name="groups_bottom_navigation">Группы</string>
    <string name="templates_bottom_navigation">Шаблоны</string>
    <string name="group_edit_text_hint">Группа*</string>
</resources>
