<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="ru.example.ivan.smssender.ui.screens.new_group.NewGroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="ru.example.ivan.smssender.ui.screens.new_group.NewGroupFragment">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_name_text_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_name_edit_text"
                    android:hint="@string/group_name_edit_text_hint"
                    android:text="@={viewModel.groupName}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
                android:id="@+id/contacts_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts_text_view"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/group_name_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <Button
                android:id="@+id/add_contacts_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_contacts_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/contacts_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.newGroupAddContactsOnClick()}"/>

        <ProgressBar
                android:id="@+id/new_group_loading"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:indeterminate="true"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/add_contacts_button"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:indeterminate="true"
                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/rv_item_contact" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/add_contacts_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_new_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@android:drawable/ic_input_add"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.newGroupFabCompleteOnClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>